Calculo probabilidades priori y likelihood

--- a/Tarea 1/clas_bayes_idiomas.ipynb
+++ b/Tarea 1/clas_bayes_idiomas.ipynb
@@ -46,16 +46,18 @@
     "\n",
     "Naive Bayes (NB)\n",
     "\n",
-    "$$ c_{NB} = \\underset{c \\in C}{\\mathrm{argmax}}  p(c_i)\\prod_i p(w_i \\mid c_i) $$\n",
+    "$$ c_{NB} = \\underset{c \\in C}{\\mathrm{argmax}} \\ p(c_i)\\prod_i p(w_i \\mid c_i) $$\n",
+    "\n",
+    "$$ c_{NB} = \\underset{c \\in C}{\\mathrm{argmax}} \\ \\log p(c_i) + \\sum_i \\log p(w_i \\mid c_i) $$\n",
     "\n",
     "Laplace Smoothing\n",
     "\n",
-    "$$ \\hat{p}(w \\mid c) = \\frac{\\mathrm{count}(w, c) + 1}{count(c) + \\vert V \\vert} $$"
+    "$$ \\hat{p}(w \\mid c) = \\frac{\\mathrm{count}(w, c) + 1}{\\mathrm{count}(c) + \\vert V \\vert} $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,8 +99,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Función para obtener los n-gramas de una cadena de caracteres"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "tags": [
      "outputPrepend"
@@ -154,7 +163,7 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Lenguaje:  es\nBigramas:  21457\n['Se', 'e ', ' t', 'to', 'om', 'ma', 'ar', 'rá', 'á ', ' c', 'co', 'om', 'mo', 'o ', ' p']\n\nLenguaje:  pt\nBigramas:  21817\n['Se', 'er', 'rá', 'á ', ' t', 'to', 'om', 'ma', 'ad', 'do', 'o ', ' c', 'co', 'om', 'mo']\n\nLenguaje:  en\nBigramas:  21771\n['It', 't ', ' w', 'wi', 'il', 'll', 'l ', ' b', 'be', 'e ', ' t', 'ta', 'ak', 'ke', 'en']\n\n"
+     "text": "Lenguaje:  es\nN-gramas:  21391\n['Se', 'e ', ' t', 'to', 'om', 'ma', 'ar', 'rá', 'á ', ' c', 'co', 'om', 'mo', 'o ', ' p']\n\nLenguaje:  pt\nN-gramas:  21716\n['Se', 'er', 'rá', 'á ', ' t', 'to', 'om', 'ma', 'ad', 'do', 'o ', ' c', 'co', 'om', 'mo']\n\nLenguaje:  en\nN-gramas:  21657\n['It', 't ', ' w', 'wi', 'il', 'll', 'l ', ' b', 'be', 'e ', ' t', 'ta', 'ak', 'ke', 'en']\n\n"
     }
    ],
    "source": [
@@ -167,27 +176,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "es\n847\n[('e ', 592), ('a ', 583), ('s ', 497), ('de', 448), (' d', 424), (' e', 403), ('o ', 388), ('en', 366), ('n ', 363), ('es', 321)]\npt\n860\n[('o ', 661), ('s ', 647), ('e ', 568), ('a ', 540), (' d', 442), (' e', 349), ('os', 341), ('de', 318), (' a', 303), ('do', 301)]\nen\n862\n[('e ', 671), (' t', 512), ('th', 457), (' a', 423), ('he', 413), ('s ', 402), ('in', 341), ('d ', 339), ('er', 313), ('n ', 303)]\n"
+     "text": "Tamaño corpus: 64764 n-gramas\n['Se', 'e ', ' t', 'to', 'om', 'ma', 'ar', 'rá', 'á ', ' c']\n"
     }
    ],
    "source": [
-    "for index, counters in freq_ngamas.items():\n",
-    "    print(clases[index])\n",
-    "    print(len(counters))\n",
-    "    print(counters.most_common(10))"
+    "todos_ngramas = [ngrama for ngramas_lang in ngramas.values() for ngrama in ngramas_lang]\n",
+    "tam_corpus = len(todos_ngramas)\n",
+    "print(f'Tamaño corpus: {tam_corpus} n-gramas')\n",
+    "print(todos_ngramas[0:10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Probabilidades a priori\n",
+    "\n",
+    "Calculo las probabilidades a priori de las clases"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "{0: 0.3302915199802359, 1: 0.33530973997900065, 2: 0.33439874004076336}"
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "prob_priori = {\n",
+    "    index : len(ngramas_lang)/tam_corpus\n",
+    "    for index, ngramas_lang in ngramas.items()\n",
+    "}\n",
+    "prob_priori"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Verisimilitud (Likelihood)\n",
+    "\n",
+    "Ahora, calculo la probabilidad de cada n-grama dada la clase con Laplace Smoothing\n",
+    "\n",
+    "Primero, cuento las ocurrencias de cada n-grama en cada clase "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Idioma: es\nNúmero de tipos: 847\n[('e ', 592), ('a ', 583), ('s ', 497), ('de', 448), (' d', 424), (' e', 403), ('o ', 388), ('en', 366), ('n ', 363), ('es', 321)] \n\nIdioma: pt\nNúmero de tipos: 857\n[('o ', 661), ('s ', 647), ('e ', 568), ('a ', 540), (' d', 442), (' e', 349), ('os', 341), ('de', 318), (' a', 305), ('do', 301)] \n\nIdioma: en\nNúmero de tipos: 861\n[('e ', 671), (' t', 512), ('th', 457), (' a', 423), ('he', 413), ('s ', 402), ('in', 341), ('d ', 339), ('er', 313), ('n ', 303)] \n\n"
+    }
+   ],
+   "source": [
+    "freq_ngramas = {\n",
+    "    index : Counter(ngramas_lang)\n",
+    "    for index, ngramas_lang in ngramas.items()\n",
+    "}\n",
+    "for index, counters in freq_ngramas.items():\n",
+    "    print(f'Idioma: {clases[index]}')\n",
+    "    print(f'Número de tipos: {len(counters)}')\n",
+    "    print(counters.most_common(10), '\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora, la frecuencia total de los tipos en todo el corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Número de tipos: 1328\n['Se', 'e ', ' t', 'to', 'om', 'ma', 'ar', 'rá', 'á ', ' c']\n"
+    }
+   ],
+   "source": [
+    "freq_total = sum(freq_ngramas.values(), Counter())\n",
+    "tipos = [tipo for tipo in freq_total.keys()]\n",
+    "print(f'Número de tipos: {len(tipos)}')\n",
+    "print(tipos[:10])\n",
+    "# plt.figure()\n",
+    "# plt.title(f'Rango vs frecuencia en bigramas (TOTAL)')\n",
+    "# freq = [fr[1] for fr in freq_total.most_common()]\n",
+    "# ranks = range(1, len(freq)+1)\n",
+    "# plt.scatter(np.log(ranks), np.log(freq), color='#9f0ff0')\n",
+    "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ \\hat{p}(w \\mid c) = \\frac{\\mathrm{count}(w, c) + 1}{\\mathrm{count}(c) + \\vert V \\vert} $"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "{0: 0.00039627501486031304, 1: 0.00010667316865027964, 2: 1.5238095238095238e-05}\n"
+    }
+   ],
+   "source": [
+    "likelihoods = {\n",
+    "    tipo : {\n",
+    "        lang : (freq[tipo] + 1) / (len(freq) + tam_corpus)\n",
+    "        for lang, freq in freq_ngramas.items()\n",
+    "    }\n",
+    "    for tipo in tipos\n",
+    "}\n",
+    "print(likelihoods['ás'])"
    ]
   },
   {
