Aplico métricas y guardo resultados

--- a/Tarea 1/clas_bayes_idiomas.ipynb
+++ b/Tarea 1/clas_bayes_idiomas.ipynb
@@ -84,7 +84,8 @@
     "from nltk.corpus import floresta, cess_esp, brown\n",
     "from sklearn.model_selection import train_test_split\n",
     "import operator\n",
-    "import numpy as np \n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import random\n",
     "import json\n",
     "from collections import Counter\n",
@@ -558,29 +559,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from itertools import count\n",
-    "# from collections import defaultdict\n",
-    "# from functools import partial\n",
-    "\n",
-    "# def hashing_v1(seq):\n",
-    "#     mapping = defaultdict(partial(next, count()))\n",
-    "#     return [mapping[tuple(el)] for el in seq]\n",
-    "\n",
-    "# def hashing_v2(seq):\n",
-    "#     mapping = defaultdict(partial(next, count()))\n",
-    "#     result = []\n",
-    "#     for le in seq:\n",
-    "#         le.flags.writeable = False\n",
-    "#         result.append(mapping[le.data])\n",
-    "#     return result"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -666,18 +644,18 @@
     "#     for lang, frases in test_corpus.items() \n",
     "# }\n",
     "\n",
-    "print(test_ngramas['es'][0])"
+    "print(test_ngramas['es'][0][:20])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Counter({'s ': 9, 'a ': 6, 'ta': 6, 'ic': 6, 'o ': 5, 'en': 5, 'nt': 5, 'ca': 5, ' s': 4, 'e ': 4, ' e': 4, ' a': 4, 'ad': 4, 'os': 4, ' p': 4, 'me': 4, 'es': 4, 'se': 3, 'do': 3, 'er': 3, 'or': 3, ' l': 3, ' d': 3, 'li': 3, 'mi': 3, 'om': 2, 'mo': 2, 'st': 2, 'to': 2, 'n ': 2, 'el': 2, 'l ': 2, 'ap': 2, 'pa': 2, 'an': 2, 'te': 2, 'ri': 2, 'io': 2, 'r ': 2, ' ,': 2, ', ': 2, 'lo': 2, 'po': 2, 'ím': 2, 'pr': 2, 'as': 2, 'de': 2, 'us': 2, 'da': 2, 'su': 2, ' q': 2, 'qu': 2, 'Co': 1, ' h': 1, 'ha': 1, ' v': 1, 'vi': 1, 'is': 1, 'ar': 1, 'rt': 1, 'ol': 1, 'lí': 1, 'ro': 1, ' o': 1, 'rg': 1, 'gá': 1, 'án': 1, 'ni': 1, 'co': 1, 'op': 1, 're': 1, 'ia': 1, 'di': 1, 'if': 1, 'fi': 1, 'cu': 1, 'ul': 1, 'lt': 1, 'a_': 1, '_c': 1, 'au': 1, 'sa': 1, ' f': 1, 'fu': 1, 'un': 1, 'nd': 1, 'am': 1, 'al': 1, 'lm': 1, 'u ': 1, ' b': 1, 'ba': 1, 'aj': 1, 'ja': 1, 'ab': 1, 'bi': 1, 'il': 1, 'id': 1, 'd ': 1, ' t': 1, 'té': 1, 'ér': 1, 'rm': 1, ' y': 1, 'y ': 1, 'uí': 1, 'ue': 1, ' m': 1, 'im': 1, 'it': 1, 'pl': 1, 'ac': 1, 'ci': 1, 'on': 1, 'ne': 1, 'rá': 1, 'ác': 1, 'ct': 1, 'ti': 1, ' .': 1})\n"
+     "text": "0  1\n0    s   9\n1    a   6\n2    ta  6\n3    ic  6\n4    o   5\n..   .. ..\n115  rá  1\n116  ác  1\n117  ct  1\n118  ti  1\n119   .  1\n\n[120 rows x 2 columns]\n"
     }
    ],
    "source": [
@@ -686,18 +664,18 @@
     "    for lang, ngramas in test_ngramas.items()\n",
     "}\n",
     "\n",
-    "print(test_freq['es'][0])"
+    "print(pd.DataFrame(test_freq['es'][0].most_common()))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "{'Co': 0.004366812227074236, 'om': 0.008733624454148471, 'mo': 0.008733624454148471, 'o ': 0.021834061135371178, ' s': 0.017467248908296942, 'se': 0.013100436681222707, 'e ': 0.017467248908296942, ' h': 0.004366812227074236, 'ha': 0.004366812227074236, 'a ': 0.026200873362445413, ' v': 0.004366812227074236, 'vi': 0.004366812227074236, 'is': 0.004366812227074236, 'st': 0.008733624454148471, 'to': 0.008733624454148471, ' e': 0.017467248908296942, 'en': 0.021834061135371178, 'n ': 0.008733624454148471, 'el': 0.008733624454148471, 'l ': 0.008733624454148471, ' a': 0.017467248908296942, 'ap': 0.008733624454148471, 'pa': 0.008733624454148471, 'ar': 0.004366812227074236, 'rt': 0.004366812227074236, 'ta': 0.026200873362445413, 'ad': 0.017467248908296942, 'do': 0.013100436681222707, 'an': 0.008733624454148471, 'nt': 0.021834061135371178, 'te': 0.008733624454148471, 'er': 0.013100436681222707, 'ri': 0.008733624454148471, 'io': 0.008733624454148471, 'or': 0.013100436681222707, 'r ': 0.008733624454148471, ' ,': 0.008733624454148471, ', ': 0.008733624454148471, ' l': 0.013100436681222707, 'lo': 0.008733624454148471, 'os': 0.017467248908296942, 's ': 0.039301310043668124, ' p': 0.017467248908296942, 'po': 0.008733624454148471, 'ol': 0.004366812227074236, 'lí': 0.004366812227074236, 'ím': 0.008733624454148471, 'me': 0.017467248908296942, 'ro': 0.004366812227074236, ' o': 0.004366812227074236, 'rg': 0.004366812227074236, 'gá': 0.004366812227074236, 'án': 0.004366812227074236, 'ni': 0.004366812227074236, 'ic': 0.026200873362445413, 'co': 0.004366812227074236, ' d': 0.013100436681222707, 'op': 0.004366812227074236, 'pr': 0.008733624454148471, 're': 0.004366812227074236, 'es': 0.017467248908296942, 'ia': 0.004366812227074236, 'as': 0.008733624454148471, 'di': 0.004366812227074236, 'if': 0.004366812227074236, 'fi': 0.004366812227074236, 'cu': 0.004366812227074236, 'ul': 0.004366812227074236, 'lt': 0.004366812227074236, 'de': 0.008733624454148471, 'a_': 0.004366812227074236, '_c': 0.004366812227074236, 'ca': 0.021834061135371178, 'au': 0.004366812227074236, 'us': 0.008733624454148471, 'sa': 0.004366812227074236, ' f': 0.004366812227074236, 'fu': 0.004366812227074236, 'un': 0.004366812227074236, 'nd': 0.004366812227074236, 'da': 0.008733624454148471, 'am': 0.004366812227074236, 'al': 0.004366812227074236, 'lm': 0.004366812227074236, 'su': 0.008733624454148471, 'u ': 0.004366812227074236, ' b': 0.004366812227074236, 'ba': 0.004366812227074236, 'aj': 0.004366812227074236, 'ja': 0.004366812227074236, 'ab': 0.004366812227074236, 'bi': 0.004366812227074236, 'il': 0.004366812227074236, 'li': 0.013100436681222707, 'id': 0.004366812227074236, 'd ': 0.004366812227074236, ' t': 0.004366812227074236, 'té': 0.004366812227074236, 'ér': 0.004366812227074236, 'rm': 0.004366812227074236, 'mi': 0.013100436681222707, ' y': 0.004366812227074236, 'y ': 0.004366812227074236, ' q': 0.008733624454148471, 'qu': 0.008733624454148471, 'uí': 0.004366812227074236, 'ue': 0.004366812227074236, ' m': 0.004366812227074236, 'im': 0.004366812227074236, 'it': 0.004366812227074236, 'pl': 0.004366812227074236, 'ac': 0.004366812227074236, 'ci': 0.004366812227074236, 'on': 0.004366812227074236, 'ne': 0.004366812227074236, 'rá': 0.004366812227074236, 'ác': 0.004366812227074236, 'ct': 0.004366812227074236, 'ti': 0.004366812227074236, ' .': 0.004366812227074236}\n"
+     "text": "0         1\n0    Co  0.004367\n1    om  0.008734\n2    mo  0.008734\n3    o   0.021834\n4     s  0.017467\n..   ..       ...\n115  rá  0.004367\n116  ác  0.004367\n117  ct  0.004367\n118  ti  0.004367\n119   .  0.004367\n\n[120 rows x 2 columns]\n"
     }
    ],
    "source": [
@@ -712,7 +690,7 @@
     "    for lang, lista_freq in test_freq.items()\n",
     "}\n",
     "\n",
-    "print(test_prob['es'][0])"
+    "print(pd.DataFrame(test_prob['es'][0].items()))"
    ]
   },
   {
@@ -784,10 +762,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "[[1494   11    3]\n [2236    4   10]\n [2484    9    7]]\n"
+    }
+   ],
+   "source": [
+    "# freq_matrix = np.matrix([\n",
+    "#     [\n",
+    "#         count for count in counters.values() \n",
+    "#     ]\n",
+    "#     for counters in freq_pred.values()\n",
+    "# ])\n",
+    "# print(freq_matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matriz de confusión\n",
+    "\n",
+    "![Matriz de confusión](./imgs/matriz_confusion.png)\n",
+    "\n",
+    "Fuente: [https://en.wikipedia.org/wiki/Confusion_matrix]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Número total de frases a evaluar: 6258\n{'es': {'TP': 1494, 'FP': 17, 'FN': 14, 'TN': 4733}, 'pt': {'TP': 2236, 'FP': 20, 'FN': 14, 'TN': 3988}, 'en': {'TP': 2484, 'FP': 7, 'FN': 16, 'TN': 3751}}\n"
+    }
+   ],
+   "source": [
+    "total = sum([ n_sents for counters_lang in freq_pred.values() for n_sents in counters_lang.values()], 0)\n",
+    "print(f'Número total de frases a evaluar: {total}')\n",
+    "TP = 'TP'\n",
+    "FP = 'FP'\n",
+    "TN = 'TN'\n",
+    "FN = 'FN'\n",
+    "matrices_conf = {\n",
+    "    lang :  {\n",
+    "        TP : freq_pred[lang][lang], # Elementos en su clase correcta ↑\n",
+    "        FP : sum(\n",
+    "            [\n",
+    "                count if lang_count == lang else 0  # Cuáles se dijo que pertenecían a la clase lang (y no lo eran)\n",
+    "                for lang_test, pred_lang in freq_pred.items() # Por cada una de sus predicciones ↑\n",
+    "                if lang_test != lang  # Excepto los verdaderos clase lang ↑\n",
+    "                for lang_count, count in pred_lang.items() # De todos los elementos ↑\n",
+    "            ], 0),\n",
+    "        FN : sum(\n",
+    "            [\n",
+    "                count if lang_count != lang else 0  # Cuáles se dijo que no eran de clase lang\n",
+    "                for lang_count, count in freq_pred[lang].items() # De los elemtentos que pertenecen a clase lang (verdaderos) ↑\n",
+    "            ], 0),\n",
+    "        TN : sum([\n",
+    "                count if lang_count != lang else 0 # Cuáles se dijo que no pertenecían a la clase lang y fue cierto\n",
+    "                for lang_test, pred_lang in freq_pred.items() # Por cada una de sus predicciones ↑\n",
+    "                if lang_test != lang  # Excepto los verdaderos clase lang ↑\n",
+    "                for lang_count, count in pred_lang.items() # De todos los elementos ↑\n",
+    "            ], 0)\n",
+    "    }\n",
+    "    for lang in CLASES\n",
+    "}   \n",
+    "\n",
+    "print(matrices_conf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# mc : matriz de confusión\n",
+    "recall = lambda mc : mc[TP]/(mc[TP]+mc[FN])\n",
+    "specifity = lambda mc : mc[TN]/(mc[TN] + mc[FP])\n",
+    "precision = lambda mc : mc[TP]/(mc[TP] + mc[FP])\n",
+    "accuracy = lambda mc : (mc[TP]+mc[TN]) / (mc[TP]+mc[TN]+mc[FP]+mc[FN])\n",
+    "f1_score = lambda mc : 2*precision(mc)*recall(mc) / (precision(mc)+recall(mc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "{'es': {'Recall': 0.9907161803713528, 'Specifity': 0.996421052631579, 'Precision': 0.9887491727332892, 'Accuracy': 0.9950463406839246, 'f1 score': 0.9897316992381583}, 'pt': {'Recall': 0.9937777777777778, 'Specifity': 0.9950099800399201, 'Precision': 0.9911347517730497, 'Accuracy': 0.994566954298498, 'f1 score': 0.9924545051043053}, 'en': {'Recall': 0.9936, 'Specifity': 0.9981373070782331, 'Precision': 0.9971898835808912, 'Accuracy': 0.9963247043783956, 'f1 score': 0.9953917050691244}}\n"
+    }
+   ],
+   "source": [
+    "label_metricas = [('Recall', recall), ('Specifity', specifity), ('Precision', precision), ('Accuracy', accuracy), ('f1 score', f1_score)]\n",
+    "\n",
+    "metricas_modelo = {\n",
+    "    lang : {\n",
+    "        metrica[0] : metrica[1](mc)\n",
+    "        for metrica in label_metricas\n",
+    "    }\n",
+    "    for lang, mc in matrices_conf.items()\n",
+    "}\n",
+    "\n",
+    "print(metricas_modelo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "Modelo de 2-gramas\n"
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "      Recall  Specifity  Precision  Accuracy  f1 score\nes  0.990716   0.996421   0.988749  0.995046  0.989732\npt  0.993778   0.995010   0.991135  0.994567  0.992455\nen  0.993600   0.998137   0.997190  0.996325  0.995392",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Recall</th>\n      <th>Specifity</th>\n      <th>Precision</th>\n      <th>Accuracy</th>\n      <th>f1 score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>es</th>\n      <td>0.990716</td>\n      <td>0.996421</td>\n      <td>0.988749</td>\n      <td>0.995046</td>\n      <td>0.989732</td>\n    </tr>\n    <tr>\n      <th>pt</th>\n      <td>0.993778</td>\n      <td>0.995010</td>\n      <td>0.991135</td>\n      <td>0.994567</td>\n      <td>0.992455</td>\n    </tr>\n    <tr>\n      <th>en</th>\n      <td>0.993600</td>\n      <td>0.998137</td>\n      <td>0.997190</td>\n      <td>0.996325</td>\n      <td>0.995392</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 71
+    }
+   ],
+   "source": [
+    "print(f'Modelo de {n}-gramas')\n",
+    "metricas_modelo = pd.DataFrame(metricas_modelo).T\n",
+    "metricas_modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metricas_modelo.to_json(f'resultados/{n}gramas_metricas.json')"
+   ]
   }
  ]
 }
