Vuelvo a correr script con nombres de archivo correctos

--- a/Playground/boletin_matching.ipynb
+++ b/Playground/boletin_matching.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -54,9 +54,9 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\Usuario.000\\Documents\\Facultad\\Git\\2020-2\\APIT-2020-2\\Boletines\\AMLO\\txt\\preprocesados\n",
-      "['Boletín-campaña-001-010418.txt',\n",
-      " 'Boletín-campaña-002-1_020418.txt',\n",
-      " 'Boletín-campaña-004_040418.txt']\n",
+      "['Boletín-campaña-002-1_020418.txt',\n",
+      " 'Boletín-campaña-004_040418.txt',\n",
+      " 'Boletín-campaña-005_040418.txt']\n",
       "\n",
       "C:\\Users\\Usuario.000\\Documents\\Facultad\\Git\\2020-2\\APIT-2020-2\\Boletines\\JAMK\\txt\\preprocesados\n",
       "['010418 JAMK miles siguen inicio campaña.txt',\n",
@@ -96,11 +96,11 @@
     {
      "data": {
       "text/plain": [
-       "[datetime.datetime(2018, 4, 1, 12, 0, tzinfo=tzoffset(None, -21600)),\n",
-       " datetime.datetime(2018, 4, 2, 12, 0, tzinfo=tzoffset(None, -21600)),\n",
+       "[datetime.datetime(2018, 4, 2, 12, 0, tzinfo=tzoffset(None, -21600)),\n",
        " datetime.datetime(2018, 4, 4, 12, 0, tzinfo=tzoffset(None, -21600)),\n",
        " datetime.datetime(2018, 4, 4, 12, 0, tzinfo=tzoffset(None, -21600)),\n",
-       " datetime.datetime(2018, 4, 4, 12, 0, tzinfo=tzoffset(None, -21600))]"
+       " datetime.datetime(2018, 4, 4, 12, 0, tzinfo=tzoffset(None, -21600)),\n",
+       " datetime.datetime(2018, 4, 5, 12, 0, tzinfo=tzoffset(None, -21600))]"
       ]
      },
      "execution_count": 4,
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        " datetime.datetime(2018, 6, 1, 12, 0, tzinfo=tzoffset(None, -21600))]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,10 +450,11 @@
     "        # print(f'Buscando en {fname}')  \n",
     "        # print(contenido[85:170].lower())\n",
     "        # print('...')\n",
+    "        matched = False\n",
     "        for i, doc in enumerate(cursor):\n",
     "            # print('  Prueba ', i)\n",
     "            match = re.search(\n",
-    "                doc['encabezado'][1:-1].lower(), \n",
+    "                re.escape(doc['encabezado'][1:-1].lower()), \n",
     "                contenido.lower(),\n",
     "                re.IGNORECASE\n",
     "            )\n",
@@ -470,9 +471,10 @@
     "                        'boletin':contenido\n",
     "                    }}\n",
     "                ))\n",
-    "            else:\n",
-    "                # print(f\"    No hay coincidencias\")\n",
-    "                pass\n",
+    "                matched = True\n",
+    "        if not matched:\n",
+    "            print('Sin coincidencias para ', fname)\n",
+    "            coincidencias.append((fname, ''))\n",
     "        # print('------------------------------\\n')\n",
     "    res_updates = db.boletines.bulk_write(update_ops)\n",
     "    print(res_updates.bulk_api_result)\n",
@@ -481,16 +483,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'writeErrors': [], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 85, 'nModified': 2, 'nRemoved': 0, 'upserted': []}\n",
-      "{'writeErrors': [], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 136, 'nModified': 136, 'nRemoved': 0, 'upserted': []}\n",
-      "{'writeErrors': [], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 115, 'nModified': 115, 'nRemoved': 0, 'upserted': []}\n"
+      "{'writeErrors': [], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 86, 'nModified': 85, 'nRemoved': 0, 'upserted': []}\n",
+      "Sin coincidencias para  030518 JAMK Mich defensa migrantes.txt\n",
+      "Sin coincidencias para  200418 JAMK CDMX iniciativa fuero.txt\n",
+      "Sin coincidencias para  250518 JAMK Zacatecas Nestora Salgado.txt\n",
+      "{'writeErrors': [], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 144, 'nModified': 142, 'nRemoved': 0, 'upserted': []}\n",
+      "{'writeErrors': [], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 116, 'nModified': 116, 'nRemoved': 0, 'upserted': []}\n"
      ]
     }
    ],
@@ -503,18 +508,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('Boletín-campaña-002-1_020418.txt', ObjectId('5ec3089dd380e649eb619ce3')),\n",
-      " ('Boletín-campaña-004_040418.txt', ObjectId('5ec3089dd380e649eb619ce4')),\n",
-      " ('Boletín-campaña-005_040418.txt', ObjectId('5ec3089dd380e649eb619ce5')),\n",
-      " ('Boletín-campaña-006_040418.txt', ObjectId('5ec3089dd380e649eb619ce6')),\n",
-      " ('Boletín-campaña-007_050418.txt', ObjectId('5ec3089dd380e649eb619ce7'))]\n",
       "[('010418 JAMK miles siguen inicio campaña.txt',\n",
       "  ObjectId('5ec3089dd380e649eb619dab')),\n",
       " ('010418 JAMK Yuc candidato cerca jóvenes.txt',\n",
@@ -524,17 +524,20 @@
       " ('010518 JAMK Edomex unidad.txt', ObjectId('5ec3089dd380e649eb619de8')),\n",
       " ('010618 Eurviel Avila Edomex Ecatepec.txt',\n",
       "  ObjectId('5ec3089dd380e649eb619e13'))]\n",
+      "\n",
       "[('COMUNICADO_01-RAC-30-03-2018.txt', ObjectId('5ec3089dd380e649eb619d36')),\n",
       " ('COMUNICADO_02-RAC-31-03-2018.txt', ObjectId('5ec3089dd380e649eb619d37')),\n",
       " ('COMUNICADO_03-RAC-31-03-2018.txt', ObjectId('5ec3089dd380e649eb619d38')),\n",
       " ('COMUNICADO_04-RAC-01-04-2018.txt', ObjectId('5ec3089dd380e649eb619d39')),\n",
-      " ('COMUNICADO_05-RAC-01-04-2018.txt', ObjectId('5ec3089dd380e649eb619d3a'))]\n"
+      " ('COMUNICADO_05-RAC-01-04-2018.txt', ObjectId('5ec3089dd380e649eb619d3a'))]\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "for candidato in CANDIDATOS:\n",
-    "    pprint(coincidencias[candidato][:5])"
+    "for candidato in CANDIDATOS[1:]:\n",
+    "    pprint(coincidencias[candidato][:5])\n",
+    "    print()"
    ]
   },
   {
