Últimos cambios a la base de datos

--- a/Playground/boletin_matching.ipynb
+++ b/Playground/boletin_matching.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "from datetime import timedelta, datetime\n",
     "from bson.objectid import ObjectId\n",
     "from pprint import pprint\n",
-    "# from tqdm import tqdm"
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        " datetime.datetime(2018, 6, 1, 12, 0, tzinfo=tzoffset(None, -21600))]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,8 +207,7 @@
      "output_type": "stream",
      "text": [
       "{'_id': ObjectId('5ec3089dd380e649eb619ce3'),\n",
-      " 'boletin': '+----+--+--+ | [] | | | +----+--+--+\\n'\n",
-      "            'Juntos haremos historia\\n'\n",
+      " 'boletin': 'Juntos haremos historia\\n'\n",
       "            'BOLETÍN CAMPAÑA-002\\n'\n",
       "            'ASEGURA AMLO QUE EN CAMPAÑA TODO SERÁ AMOR Y PAZ, QUE LOS OTROS '\n",
       "            'CANDIDATOS SE AHORREN SUS PROVOCACIONES\\n'\n",
@@ -387,8 +386,7 @@
       "            'primero de julio, con el objetivo de evitar el fraude y que haya '\n",
       "            'democracia en el país.\\n'\n",
       "            'En la tarde-noche, López Obrador estará en Apodaca y mañana '\n",
-      "            'visitará en San Pedro, Coahuila y Gómez Palacio, Durango.\\n'\n",
-      "            'ªªªªªªªªªªª ',\n",
+      "            'visitará en San Pedro, Coahuila y Gómez Palacio, Durango.\\n',\n",
       " 'candidato': 'AMLO',\n",
       " 'encabezado': 'Asegura AMLO que en campaña todo será amor y paz, que los '\n",
       "               'otros candidatos se ahorren sus provocaciones',\n",
@@ -425,14 +423,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def emparejador(metadatos, candidato, db):\n",
     "    coincidencias = []\n",
     "    update_ops = []\n",
-    "    for fname, fecha in zip(metadatos['fnames'], metadatos['fechas_iso']):\n",
+    "    for fname, fecha in tqdm(zip(metadatos['fnames'], metadatos['fechas_iso'])):\n",
     "        contenido = \"\"\n",
     "        full_fname = os.path.join(metadatos['ruta_abs'], fname)\n",
     "        with open(full_fname, 'r', encoding='utf-8') as f:\n",
@@ -483,18 +481,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "85it [00:08,  9.95it/s]\n",
+      "2it [00:00, 10.79it/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'writeErrors': [], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 86, 'nModified': 85, 'nRemoved': 0, 'upserted': []}\n",
-      "Sin coincidencias para  030518 JAMK Mich defensa migrantes.txt\n",
-      "Sin coincidencias para  200418 JAMK CDMX iniciativa fuero.txt\n",
-      "Sin coincidencias para  250518 JAMK Zacatecas Nestora Salgado.txt\n",
-      "{'writeErrors': [], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 144, 'nModified': 142, 'nRemoved': 0, 'upserted': []}\n",
+      "{'writeErrors': [], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 85, 'nModified': 81, 'nRemoved': 0, 'upserted': []}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "147it [00:12, 11.48it/s]\n",
+      "2it [00:00, 11.57it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'writeErrors': [], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 147, 'nModified': 145, 'nRemoved': 0, 'upserted': []}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "116it [00:10, 11.51it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "{'writeErrors': [], 'writeConcernErrors': [], 'nInserted': 0, 'nUpserted': 0, 'nMatched': 116, 'nModified': 116, 'nRemoved': 0, 'upserted': []}\n"
      ]
     }
@@ -508,13 +538,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[('Boletín-campaña-002-1_020418.txt', ObjectId('5ec3089dd380e649eb619ce3')),\n",
+      " ('Boletín-campaña-004_040418.txt', ObjectId('5ec3089dd380e649eb619ce4')),\n",
+      " ('Boletín-campaña-005_040418.txt', ObjectId('5ec3089dd380e649eb619ce5')),\n",
+      " ('Boletín-campaña-006_040418.txt', ObjectId('5ec3089dd380e649eb619ce6')),\n",
+      " ('Boletín-campaña-007_050418.txt', ObjectId('5ec3089dd380e649eb619ce7'))]\n",
+      "\n",
       "[('010418 JAMK miles siguen inicio campaña.txt',\n",
       "  ObjectId('5ec3089dd380e649eb619dab')),\n",
       " ('010418 JAMK Yuc candidato cerca jóvenes.txt',\n",
@@ -535,9 +571,18 @@
     }
    ],
    "source": [
-    "for candidato in CANDIDATOS[1:]:\n",
+    "for candidato in CANDIDATOS[:]:\n",
     "    pprint(coincidencias[candidato][:5])\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.close()"
    ]
   },
   {
